Fix mobile banner text alignment.

--- a/src/jazkarta.plonetheme/src/jazkarta/plonetheme/theme/less/jazkarta.less
+++ b/src/jazkarta.plonetheme/src/jazkarta/plonetheme/theme/less/jazkarta.less
@@ -576,6 +576,7 @@ dl.InfoList dd {
         line-height: 150%;
         h3 {
             line-height: 150%;
+            margin: 10px 0 5px 0;
         }
         @media (max-width: @plone-grid-float-breakpoint-max) {
             font-size: 150%;
